--- a/other.html
+++ b/other.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Welcome.</title>
   <link rel="stylesheet" href="styles/format.css">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
   <!--navigation bar-->
