--- a/programming.html
+++ b/programming.html
@@ -11,7 +11,7 @@
   <div>
     <nav>
       <ul class='navigation'>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.php">Home</a></li>
         <li><a class='current' href="programming.html">Programming</a></li>
         <li><a href="other.html">Other</a></li>
       </ul>
