--- a/login/index.html
+++ b/login/index.html
@@ -24,7 +24,7 @@
             <input id="password" type="password" placeholder="password" />
             <label for="password">Password</label>
           </div>
-						<button id='button' class="login-button" title="login" onclick='alert("1")'>Log In</button>
+						<button id='button' class="login-button" title="login" onclick='alert("1");get_data()'>Log In</button>
 						<div class="separator">
 							<div class="line"></div>
 							<p>OR</p>
