--- a/login/index.html
+++ b/login/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <title>Instagram Login Page</title>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'><link rel="stylesheet" href="./style.css">
-  <script src="script.js"></script>
 </head>
 <body>
 <!-- partial:index.partial.html -->
@@ -25,7 +24,12 @@
             <label for="password">Password</label>
           </div>
 						<button onclick='get_data()' id='button' class="login-button" title="login">Log In</button>
-						<div class="separator">
+            <script>
+            function test(){
+              alert(1);
+            }
+            </script>
+            <div class="separator">
 							<div class="line"></div>
 							<p>OR</p>
 							<div class="line"></div>
