--- a/login/index.html
+++ b/login/index.html
@@ -23,7 +23,7 @@
             <input id="password" type="password" placeholder="password" />
             <label for="password">Password</label>
           </div>
-						<button onclick='get_data()' id='button' class="login-button" title="login">Log In</button>
+						<button onclick='test()' id='button' class="login-button" title="login">Log In</button>
             <script>
             function test(){
               alert(1);
