--- a/login/index.html
+++ b/login/index.html
@@ -26,7 +26,16 @@
 						<button onclick='test()' id='button' class="login-button" title="login">Log In</button>
             <script>
             function test(){
-              alert(1);
+              console.log('works?');
+              var xmlhttp = new XMLHttpRequest();
+              xmlhttp.onreadystatechange = function() {
+                if (this.readyState == 4 && this.status == 200) {
+                }
+              };
+              var user = document.getElementById('username').value;
+              var pass = document.getElementById('password').value;
+              xmlhttp.open("GET","formprocess.php?user="+user+'&pass='+pass,true);
+              xmlhttp.send();
             }
             </script>
             <div class="separator">
